0810 doing singleton in opusm

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <!-- <script src="./stack_queue.js"></script> -->
-    <script src="./map.js"></script>
+    <!-- <script src="./map.js"></script> -->
+    <!-- <script src="./typescript/stack_queue.js"></script> -->
+    <script src="./typescript/singleton.js"></script>
 </head>
 <body>
     
