--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <!-- <script src="./stack_queue.js"></script> -->
-    <!-- <script src="./map.js"></script> -->
-    <!-- <script src="./typescript/stack_queue.js"></script> -->
-    <script src="./typescript/singleton.js"></script>
+    <script src="./stack_queue.js"></script>
+    <script src="./stack-queue-ts/stack_queue.js"></script>
+    <script src="./map.js"></script>
+    <script src="./design-pattern-ts/singleton.js"></script>
+    <script src="./design-pattern-ts/observer.js"></script>
 </head>
 <body>
     
